tests/rpm-pkgs/autogen-5.18.16-9.fc35/output-exp@cbmc/scan-results.err
Error: COMPILER_WARNING:
autogen-5.18.16/autoopts/test/cond-testd/cond.c:22: included_from: Included from here.
autogen-5.18.16/autoopts/test/cond-testd/cond.h:121:4: warning[-Wcpp]: #warning undefining SECOND due to option name conflict
#  121 | #  warning undefining SECOND due to option name conflict
#      |    ^~~~~~~
cc1: note: unrecognized command-line option '-Wno-unknown-warning-option' may have been intended to silence earlier diagnostics
